--- a/fullstack/template/jeonggi_detail.html
+++ b/fullstack/template/jeonggi_detail.html
@@ -139,6 +139,7 @@ amplitude.getInstance().init("04685bb3a64174336f2d41ffbba22982", null, {
 	<section class="view-sect">
 		<h3 class="h5">상세 정보</h3>
 		<div class="content out" id="preview_detail_text" style="white-space: pre-line;">
+			<img src="{{ audition.img_url}}" alt="Audition Image" >
 			{{ audition.detail_data }}
 		</div>		
 	</section>
