--- a/fullstack/template/jeonggi_detail.html
+++ b/fullstack/template/jeonggi_detail.html
@@ -127,7 +127,7 @@ amplitude.getInstance().init("04685bb3a64174336f2d41ffbba22982", null, {
 				</td>
 				<td class="th">마감일</td>
 				<td id="preview_application_period">
-					{{ audition.due_date}}
+					{{ audition.due_date |date:"Y-m-d"}}
 				</td>
 			</tr>
 			
